Fix issue with fotter visible on load

--- a/src/Assets/Styles/Components/Feed/feed.scss
+++ b/src/Assets/Styles/Components/Feed/feed.scss
@@ -3,7 +3,7 @@
   justify-content: flex-start;
   flex-direction: column;
   min-width: 100%;
-  min-height: 50vh;
+  min-height: 100vh;
   padding: 0 1em;
 
   .no-events {
